<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.drjardin.ScrollingActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="60"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item android:id="@+id/action_inicio"
        android:orderInCategory="80"
        android:title="@string/action_inicio"
        app:showAsAction="never"></item>
    <item android:id="@+id/action_configuracion"
        android:orderInCategory="80"
        android:title="@string/action_configuracion"
        app:showAsAction="never"></item>
    <item android:id="@+id/action_historia"
        android:orderInCategory="90"
        android:title="@string/action_historia"
        app:showAsAction="never"></item>
    <item android:id="@+id/action_registro"
        android:orderInCategory="100"
        android:title="@string/action_registro"
        app:showAsAction="never"
        android:actionLayout="@layout/activity_registro"></item>
    <item
        android:id="@+id/inicio"
        app:showAsAction="always"
        android:title="@string/titulo_tienda"
        android:icon="@mipmap/ic_launcher"></item>
</menu>
