<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorPrimaryDark"
    tools:context="com.example.android.drjardin.RegistroActivity"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentBottom="true"
                android:background="@drawable/fondo3" />
                <TextView
                    android:id="@+id/seguro_eliminar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/seguro"
                    android:textSize="@dimen/textoPeque"
                    android:layout_margin="@dimen/margin_16dp"/>
                <RadioGroup
                    android:id="@+id/radio_group_confirmar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/seguro_eliminar"
                    android:layout_centerHorizontal="true">
                    <RadioButton
                        android:id="@+id/radio_si_eliminar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/si"
                        android:layout_margin="@dimen/margin_16dp"/>
                    <RadioButton
                        android:id="@+id/radio_no_eliminar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/no"
                        android:layout_margin="@dimen/margin_16dp"/>
                </RadioGroup>
                <Button
                    android:id="@+id/boton_confirmar_eliminar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/radio_group_confirmar"
                    android:layout_margin="@dimen/margin_16dp"
                    android:layout_centerHorizontal="true"
                    android:text="@string/confirmar"/>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>
